--- a/androidApp/src/main/res/layout/activity_check_and_send_mail.xml
+++ b/androidApp/src/main/res/layout/activity_check_and_send_mail.xml
@@ -14,7 +14,9 @@
         android:layout_marginBottom="25dp"
         android:background="@color/beige"
         android:drawableStart="@drawable/ic_arrow_left"
-        android:drawableLeft="@drawable/ic_arrow_left"
+        android:padding="@dimen/large_padding"
+        android:textColor="@color/dark_green"
+        app:tint="@color/dark_green"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -24,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="84dp"
-        android:text="Mot de passe oublié ?"
+        android:text="@string/mot_de_passe_oubli"
         android:textColor="@color/darkGreen"
         android:textSize="16sp"
         android:textStyle="bold"
