--- a/androidApp/src/main/res/layout/activity_forms_add_aliments.xml
+++ b/androidApp/src/main/res/layout/activity_forms_add_aliments.xml
@@ -186,6 +186,8 @@
 
         <TextView
             android:id="@+id/dateTv"
+            app:layout_constraintWidth_default="spread"
+            android:minWidth="5dp"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:gravity="center"
