--- a/androidApp/src/main/res/layout/activity_send_email_reset_password.xml
+++ b/androidApp/src/main/res/layout/activity_send_email_reset_password.xml
@@ -53,7 +53,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="155dp"
-        android:text="Mettre à jours votre mot de passe ."
+        android:text="Mettre à jour votre mot de passe."
         android:textColor="@color/darkGreen"
         android:textSize="20dp"
         android:textStyle="bold"
@@ -78,13 +78,11 @@
 
     <Button
         android:id="@+id/button_resend_code"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="7dp"
-        android:layout_marginLeft="7dp"
         android:layout_marginEnd="6dp"
-        android:layout_marginRight="6dp"
-        android:layout_marginBottom="91dp"
+        android:layout_marginBottom="88dp"
         android:background="@drawable/rounded_button"
         android:text="Renvoyer le code"
         android:textColor="@color/darkGreen"
@@ -96,9 +94,9 @@
 
     <Button
         android:id="@+id/button_continued"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="86dp"
+        android:layout_marginBottom="88dp"
         android:background="@drawable/rounded_button"
         android:text="Continuer"
         android:textColor="@color/darkGreen"
