--- a/androidApp/src/main/res/values/styles.xml
+++ b/androidApp/src/main/res/values/styles.xml
@@ -116,4 +116,33 @@
             <item name="android:windowFullscreen">true</item>
     </style>
 
+    <!-- Terms Pop Up -->
+    <style name="terms_main_title">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_margin">12dp</item>
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:textColor">@color/darkGreen</item>
+    </style>
+
+    <style name="terms_main_titles">
+        <item name="android:textSize">15sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_margin">13dp</item>
+        <item name="android:textColor">@color/darkGreen</item>
+    </style>
+
+    <style name="terms_paragraphs">
+        <item name="android:textSize">14sp</item>
+        <item name="android:layout_margin">8dp</item>
+    </style>
+
+    <style name="terms_with_chip">
+        <item name="android:textSize">14sp</item>
+        <item name="android:layout_marginLeft">20dp</item>
+        <item name="android:layout_marginRight">8dp</item>
+        <item name="android:layout_marginBottom">8dp</item>
+        <item name="android:layout_marginTop">8dp</item>
+    </style>
+
 </resources>
